...
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="100"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/linear_expand"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_below="@+id/toolbarLayout"

                    android:orientation="horizontal"
                    android:visibility="visible">

                    <com.eligasht.reservation.tools.ExpandableListViewE
                        android:id="@+id/lvExp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:animateLayoutChanges="true"
                        android:cacheColorHint="#00000000"
                        android:divider="#ffffff"
                        android:groupIndicator="@null"
...
