...
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    android:visibility="gone"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_all"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="4dp"
                android:layout_weight="0.02"
...
                        android:gravity="left"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp">


                        <TextView
                            android:id="@+id/btnExpand"
                            android:layout_width="0dp"
                            android:layout_weight="0.1"
                            android:layout_height="25dp"
                            android:gravity="center"
                            android:textSize="@dimen/_12dp_txtSize"
                            android:textAppearance="@style/Arrow"
                            android:textColor="#000"
                            android:text="@string/icon_exp_up"
                            />
                        <TextView
                            android:id="@+id/txt_economi"
                            android:layout_width="0dp"
                            android:layout_weight="0.2"

                            android:layout_height="match_parent"
                            android:layout_marginLeft="0dp"

                            android:background="@drawable/background_strock_blue_dark_economi"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:text="اکونومی"
                            android:textColor="#003399"
                            android:textSize="9dp" />

                        <TextView
                            android:id="@+id/txttedad"
                            android:layout_width="0dp"
...
